--- a/templates/all_dishes.html
+++ b/templates/all_dishes.html
@@ -6,21 +6,11 @@
     <a class="waves-effect waves-light btn-small left" href="{{url_for('show_cart')}}">To see cart</a>
 </div>
 
-<style>
-    .toast {
-        position: fixed;
-        top: 60%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        margin-top:127px
-      }
-</style>
-
 {% with success = get_flashed_messages(category_filter=['success']) %}
 {% if success %}
 {% for message in success%}
     <script classes="toast-container">
-        M.toast({html: '{{message}}',displayLength:5000,classes: 'rounded green'})
+        M.toast({html: '{{message}}',displayLength:4000,classes: 'rounded green success-toast-margin-right'})
     </script>
 {% endfor %}
 {% endif %}
@@ -29,9 +19,10 @@
 {% with error = get_flashed_messages(category_filter=['error']) %}
 {% if error %}
 {% for message in error %}
-<script>
-    M.toast({html: '{{message}}',displayLength:5000,classes: 'rounded red'})
-</script>{% endfor %}
+<script >
+    M.toast({html: '{{message}}',displayLength:4000,classes: 'rounded red margin-right'})
+</script>
+{% endfor %}
 {% endif %}
 {% endwith %}
 
