finished toast , updated delivery function , 1 step before finish

--- a/templates/create_category.html
+++ b/templates/create_category.html
@@ -8,12 +8,12 @@
             <div class="input-field col s12">
                 <input placeholder="Category name" id="category_name" type="text" class="validate" name="category_name"
                     required>
-                <label for="category_name">Category name :</label>
+                <label for="category_name" class="bigger-text">Category name :</label>
             </div>
             <div class="input-field col s12">
                 <input placeholder="Category image URL" id="image_url" type="text" class="validate" name="image_url"
                     required>
-                <label for="image_url">Category image URL :</label>
+                <label for="image_url" class="bigger-text">Category image URL :</label>
             </div>
         </div>
         <button type="submit" class="waves-effect waves-light btn-small">Accept</button>
