--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -7,7 +7,7 @@
             <div class="input-field col s12">
                 <input placeholder="Category name" id="category_name" type="text" class="validate" name="category_name"
                     value="{{category.category_name}}" required>
-                <label for="category_name">Category name :</label>
+                <label for="category_name" class="bigger-text">Category name :</label>
             </div>
             <div>
                 <img src="{{category.image_url}}" alt="Category image" class="edit_delete_img">
@@ -16,7 +16,7 @@
                 <div class="input-field col s12">
                     <input placeholder="Image url" id="image_url" type="text" class="validate" name="image_url"
                         value="{{category.image_url}}" required>
-                    <label for="image_url">Image url :</label>
+                    <label for="image_url" class="bigger-text">Image url :</label>
                 </div>
             </div>
             <div>
