--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="background_image">
-        <div class="background_overlay">
+        <div>
             <div class="container">
                 {% include 'nav.html' %}
                 {% block content %}
