--- a/static/style.css
+++ b/static/style.css
@@ -1,20 +1,7 @@
-.background-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-
 .background_image {
   background-image: url("images/istockphoto-811314000-170667a.jpg");
   background-repeat: repeat;
   background-size: cover;
-}
-
-.color {
-    background-color: lightblue;
 }
 .centerize {
     text-align: center;
@@ -29,25 +16,11 @@
 .smaller-text {
   font-size:12px;
 }
-.underline {
-    text-decoration:underline;
-}
 .small-margin {
-  margin-bottom: 5px;
-}
-.padding {
-  padding-right: 60px;
-}
-.card-body {
-  max-height: 300px;
-  overflow-y: scroll;
   margin-bottom: 5px;
 }
 .red {
   color:red;
-}
-.justify {
-  justify-content: space-around;
 }
 nav .brand-logo img {
   height:30px;
@@ -102,9 +75,6 @@ nav {
 .red-text {
   color:red;
 }
-.space {
-  justify-content: space-between;
-}
 .container-price-icon {
   display:flex;
   align-items:center;
@@ -115,10 +85,6 @@ nav {
 input[type="number"] {
   width:10%;
   display:inline-block;
-}
-.fit-in-line {
-  width:110%;
-  display:inline-block
 }
 .top-border {
   border-top: 2px black solid;
@@ -158,9 +124,6 @@ input[type="number"] {
   border-top:1px darkblue solid;
   border-bottom:1px darkblue solid;
 }
-.textarea_size {
-  max-height: 200px !important;
-}
 .edit_delete_img {
   max-height:250px;
   max-width:200px
@@ -188,12 +151,12 @@ input[type="number"] {
   margin-top:25px;
   margin-right:25px
 }
-.margin-left {
-  margin-left:25px
-}
 .margin-right {
   margin-right:250px
 }
 .success-toast-margin-right {
   margin-right:330px
+}
+.white-backgroud {
+  background-color: white !important;
 }
