--- a/templates/category_delete_confirm.html
+++ b/templates/category_delete_confirm.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
 <h4>Are you sure to delete this category?</h4>
-<ul class="collection with-header">
+<ul class="collection with-header white-backgroud">
     <li class="collection-header">
         <h4>Category information</h4>
     </li>
@@ -14,9 +14,9 @@
         <img src="{{category.image_url}}" class="edit_delete_img">
     </li>
     <br>
-    <div class="bold">Containing the dishes :
+    <div class="bold confirm-delete-margin">Containing the dishes :
     </div>
-    <ul>
+    <ul class="confirm-delete-margin">
         <li class="dish_list">
             {% if category.dishes %}
             {% for dish in category.dishes %}
