--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,9 @@
 {% with success = get_flashed_messages(category_filter=['success']) %}
 {% if success %}
 {% for message in success%}
-<div class="alert alert-success centerize green-text text-darken-1 bigger-text" role="alert">{{message}}</div>
+<script classes="toast-container">
+    M.toast({ html: '{{message}}', displayLength: 3000, classes: 'rounded green success-toast-margin-right' })
+</script>
 {% endfor %}
 {% endif %}
 {% endwith %}
@@ -12,10 +14,13 @@
 {% with error = get_flashed_messages(category_filter=['error']) %}
 {% if error %}
 {% for message in error %}
-<div class="alert alert-danger centerize red-text text-darken-1 bigger-text" role="alert">{{message}}</div>
+<script>
+    M.toast({ html: '{{message}}', displayLength: 3000, classes: 'rounded red margin-right' })
+</script>
 {% endfor %}
 {% endif %}
 {% endwith %}
+
 
 <div class="centerize">
     <h3 class="bold">Welcome to the Login page </h3>
