--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -10,7 +10,7 @@
             page
         </a>
         <a href="{{url_for ('manage_dishes')}}"
-            class="waves-effect waves-light grey darken-1 btn-small left margin-left">All Dishes
+            class="waves-effect waves-light grey darken-1 btn-small left a-bit-margin">All Dishes
         </a>
     </div>
 </div>
@@ -18,7 +18,9 @@
 {% with success = get_flashed_messages(category_filter=['success']) %}
 {% if success %}
 {% for message in success%}
-<div class="alert alert-success centerize green-text text-darken-1 bigger-text" role="alert">{{message}}</div>
+<script classes="toast-container">
+    M.toast({ html: '{{message}}', displayLength: 3000, classes: 'rounded green success-toast-margin-right' })
+</script>
 {% endfor %}
 {% endif %}
 {% endwith %}
@@ -26,7 +28,9 @@
 {% with error = get_flashed_messages(category_filter=['error']) %}
 {% if error %}
 {% for message in error %}
-<div class="alert alert-danger centerize red-text text-darken-1 bigger-text" role="alert">{{message}}</div>
+<script>
+    M.toast({ html: '{{message}}', displayLength: 3000, classes: 'rounded red margin-right' })
+</script>
 {% endfor %}
 {% endif %}
 {% endwith %}
