--- a/templates/manage_dishes.html
+++ b/templates/manage_dishes.html
@@ -15,11 +15,12 @@
 {% with success = get_flashed_messages(category_filter=['success']) %}
 {% if success %}
 {% for message in success%}
-<div class="alert alert-success centerize green-text text-darken-1 bigger-text" role="alert">{{message}}</div>
+<script classes="toast-container">
+    M.toast({ html: '{{message}}', displayLength: 3000, classes: 'rounded green success-toast-margin-right' })
+</script>
 {% endfor %}
 {% endif %}
 {% endwith %}
-
 <div class="center">
     <h4>Welcome staff member</h4>
     <h5>In this page you can : see , edit , create and delete dishes</h5>
