--- a/static/style.css
+++ b/static/style.css
@@ -43,10 +43,11 @@ nav .brand-logo img {
 }
 
 .logout-btn {
-  margin-top:5px;
-  margin-right:2px;
+  margin-top:10px;
+  margin-left:1px;
   height:24px;
   width:24px;
+  padding-top:3px
 }
 nav {
   background-color: transparent !important;
@@ -159,4 +160,13 @@ input[type="number"] {
 }
 .white-backgroud {
   background-color: white !important;
+}
+.icons_staff {
+  margin-top:2px
+}
+.small-margin-top {
+  margin-top:5px
+}
+.small-margin-right {
+  margin-right:5px
 }
