--- a/templates/create_dish.html
+++ b/templates/create_dish.html
@@ -10,6 +10,17 @@
 {% endfor %}
 {% endif %}
 {% endwith %}
+<br>
+<div dir="rtl">
+    <div class="center">
+        <a href="{{url_for ('manage_deliveries')}}" class="waves-effect waves-light grey darken-1 btn-small">All
+            Deliveries</a>
+        <a href="{{url_for ('main_page') }}" class="waves-effect waves-light grey darken-1 btn-small right">Back to main
+            page</a>
+        <a href="{{url_for ('manage_categories')}}" class="waves-effect waves-light grey darken-1 btn-small left">All
+            Categories</a>
+    </div>
+</div>
 
 <div class="center">
     <h5>Welcome staff member</h5>
@@ -31,40 +42,40 @@
                 <div class="input-field col s12">
                     <input placeholder="Dish name" id="dish_name" type="text" class="validate" name="dish_name"
                         required>
-                    <label for="dish_name" class="bigger-text">Dish name :</label>
+                    <label for="dish_name" class="bigger-text black-text">Dish name :</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <input placeholder="Price" id="price" type="number" step="0.5" class="validate" name="price"
                         required>
-                    <label for="price" class="bigger-text">Price :</label>
+                    <label for="price" class="bigger-text black-text">Price :</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <input placeholder="Description" id="description" type="text" class="validate" name="description"
                         required>
-                    <label for="description" class="bigger-text">Description :</label>
+                    <label for="description" class="bigger-text black-text">Description :</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <input placeholder="image URL" id="image_url" type="text" class="validate" name="image_url"
                         required>
-                    <label for="image_url" class="bigger-text">Image URL :</label>
+                    <label for="image_url" class="bigger-text black-text">Image URL :</label>
                 </div>
             </div>
             <p>
                 <label>
                     <input type="checkbox" name="is_gluten_free" />
-                    <span class="bigger-text">Is it gluten free?</span>
+                    <span class="black-text bold">Is it gluten free?</span>
                 </label>
             </p>
             <p>
                 <label>
                     <input type="checkbox" name="is_vegetarian" />
-                    <span class="bigger-text">Is it vegetarian?</span>
+                    <span class="black-text bold">Is it vegetarian?</span>
                 </label>
             </p>
             <button type="submit" class="waves-effect waves-light btn-small">Accept</button>
@@ -72,6 +83,11 @@
                 dishes</a>
             <a href="{{url_for('main_page')}}" class="waves-effect waves-light btn-small right">Back to Main</a>
         </div>
+        <div class="centerize bigger-text">Staff member</div>
+        <p class="bold">1. Please remember to add dishes with care and good quality pictures as it affects the
+            restaurant's
+            sales.</p>
+        <p class="bold">2. Please spell check the names of the dishes before the adding.</p>
     </form>
 </div>
 {% endblock %}
