--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -58,14 +58,14 @@
         <br>
         <a href="{{url_for('delete_category',id=category.id)}}" class="btn-small red darken-2" name="category_id"
             value="{{category.id}}">
-            Delete category<i class="material-icons left">
+            Delete category<i class="material-icons left icons_staff">
                 <img src="{{url_for('static',filename='images/delete_icon.png')}}" alt="Delete category"
                     class="dish-icons cart-icon">
             </i>
         </a>
         <a href="{{url_for('edit_category',id=category.id)}}" class="btn-small orange darken-2" name="category_id"
             value="{{category.id}}">
-            edit category<i class="material-icons left">
+            edit category<i class="material-icons left icons_staff">
                 <img src="{{url_for('static',filename='images/edit_icon.png')}}" alt="Delete category"
                     class="dish-icons cart-icon">
             </i>
