--- a/templates/order_history.html
+++ b/templates/order_history.html
@@ -1,9 +1,11 @@
 {% extends 'layout.html' %}
 {% block content %}
 <br>
-<div dir="rtl">
-    <a href="{{url_for('show_user')}}" class="btn waves-effect waves-light btn-small">Back to user</a>
-    <a href="{{url_for('all_dishes')}}" class="waves-effect waves-light btn-small">To all dishes</a>
+<div class="center">
+    <a href="{{url_for('show_user')}}" class="btn waves-effect waves-light btn-small right">Back to user</a>
+    <a href="{{url_for('all_dishes')}}" class="waves-effect waves-light btn-small center" style="margin-left:100px">To
+        all
+        dishes</a>
 </div>
 <br>
 
